// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SplitBillModal should compute settlements 1`] = `
<div>
  <div
    class="flex h-screen flex-col overflow-hidden"
  >
    <div
      class="border-base-300 flex shrink-0 items-center justify-between border-b px-4 py-3"
    >
      <h2
        class="text-sm font-normal tracking-tight"
      >
        Split Bill
      </h2>
      <button
        class="btn btn-ghost btn-xs btn-square text-base opacity-60 hover:opacity-100"
      >
        ✕
      </button>
    </div>
    <div
      class="flex-1 overflow-y-auto p-8"
    >
      <div
        class="rounded-box border-base-300 bg-base-200 border p-4"
      >
        <div
          class="border-base-300 mb-4 flex w-full border-b"
        >
          <button
            class="flex-1 border-b-2 px-3 py-2 text-sm transition-colors text-base-content/40 border-transparent"
          >
            Equal Split
          </button>
          <button
            class="flex-1 border-b-2 px-3 py-2 text-sm transition-colors border-primary text-primary"
          >
            Who Owes Who
          </button>
        </div>
        <div
          class="space-y-3 "
        >
          <p
            class="text-xs opacity-60"
          >
            Enter what each person paid. The calculator figures out who owes whom to settle up.
          </p>
          <label
            class="flex items-center gap-2 text-xs"
          >
            <input
              checked=""
              class="toggle toggle-xs"
              type="checkbox"
            />
            Split equally — auto-fill owes as
             
            33 ₫
             each
          </label>
          <div
            class="max-h-44 space-y-2 overflow-y-auto pr-1"
          >
            <div
              class="flex items-center gap-1.5"
            >
              <input
                class="input input-sm input-bordered w-28"
                placeholder="Name"
                type="text"
                value="Alice"
              />
              <input
                class="input input-sm input-bordered w-28 text-right"
                min="0"
                placeholder="Paid"
                step="0.01"
                type="number"
                value="100"
              />
              <span
                class="text-xs opacity-50"
              >
                /
              </span>
              <span
                class="bg-base-200 flex h-8 w-28 items-center justify-end rounded-md px-2 text-sm font-normal opacity-80"
              >
                33 ₫
              </span>
              <button
                class="btn btn-ghost btn-xs"
              >
                ✕
              </button>
            </div>
            <div
              class="flex items-center gap-1.5"
            >
              <input
                class="input input-sm input-bordered w-28"
                placeholder="Name"
                type="text"
                value="Bob"
              />
              <input
                class="input input-sm input-bordered w-28 text-right"
                min="0"
                placeholder="Paid"
                step="0.01"
                type="number"
                value=""
              />
              <span
                class="text-xs opacity-50"
              >
                /
              </span>
              <span
                class="bg-base-200 flex h-8 w-28 items-center justify-end rounded-md px-2 text-sm font-normal opacity-80"
              >
                33 ₫
              </span>
              <button
                class="btn btn-ghost btn-xs"
              >
                ✕
              </button>
            </div>
            <div
              class="flex items-center gap-1.5"
            >
              <input
                class="input input-sm input-bordered w-28"
                placeholder="Name"
                type="text"
                value="Carol"
              />
              <input
                class="input input-sm input-bordered w-28 text-right"
                min="0"
                placeholder="Paid"
                step="0.01"
                type="number"
                value=""
              />
              <span
                class="text-xs opacity-50"
              >
                /
              </span>
              <span
                class="bg-base-200 flex h-8 w-28 items-center justify-end rounded-md px-2 text-sm font-normal opacity-80"
              >
                33 ₫
              </span>
              <button
                class="btn btn-ghost btn-xs"
              >
                ✕
              </button>
            </div>
          </div>
          <div
            class="flex gap-2"
          >
            <button
              class="btn btn-outline btn-sm border-base-content/20 bg-base-100/10 hover:bg-base-100/20 flex-1 backdrop-blur"
            >
              + Add Person
            </button>
            <button
              class="btn btn-primary btn-sm flex-1"
            >
              Settle Up
            </button>
          </div>
          <div
            class="flex items-center justify-between text-xs opacity-60"
          >
            <span>
              Total Paid:
               
              <strong>
                100 ₫
              </strong>
            </span>
            <span>
              Total Owes:
               
              <strong>
                100 ₫
              </strong>
            </span>
          </div>
          <div
            class="bg-base-200 mt-2 flex flex-col space-y-2 gap-y-2 rounded-xl p-3"
          >
            <span
              class="text-xs font-normal"
            >
              Settle Up
            </span>
            <div
              class="bg-base-100/50 flex items-center justify-between rounded-lg px-3 py-2"
            >
              <span
                class="text-sm font-normal"
              >
                Bob
                 
                <span
                  class="text-xs opacity-50"
                >
                  pays
                </span>
                 
                Alice
              </span>
              <span
                class="text-sm font-normal"
              >
                33 ₫
              </span>
            </div>
            <div
              class="bg-base-100/50 flex items-center justify-between rounded-lg px-3 py-2"
            >
              <span
                class="text-sm font-normal"
              >
                Carol
                 
                <span
                  class="text-xs opacity-50"
                >
                  pays
                </span>
                 
                Alice
              </span>
              <span
                class="text-sm font-normal"
              >
                33 ₫
              </span>
            </div>
          </div>
        </div>
        <div
          class="border-base-content/10 flex items-center justify-between gap-2 border-t pt-3"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <span
              class="text-xs opacity-60"
            >
              Currency
            </span>
            <select
              class="select select-xs select-bordered w-20"
            >
              <option
                value="VND"
              >
                VND
              </option>
              <option
                value="USD"
              >
                USD
              </option>
              <option
                value="EUR"
              >
                EUR
              </option>
              <option
                value="GBP"
              >
                GBP
              </option>
              <option
                value="JPY"
              >
                JPY
              </option>
              <option
                value="KRW"
              >
                KRW
              </option>
              <option
                value="THB"
              >
                THB
              </option>
              <option
                value="ILS"
              >
                ILS
              </option>
              <option
                value="INR"
              >
                INR
              </option>
              <option
                value="AUD"
              >
                AUD
              </option>
              <option
                value="CAD"
              >
                CAD
              </option>
              <option
                value="SGD"
              >
                SGD
              </option>
            </select>
          </div>
          <div
            class="flex items-center gap-1.5"
          >
            <button
              class="btn btn-outline btn-xs border-base-content/20 bg-base-100/10 hover:bg-base-100/20 backdrop-blur"
            >
              ⬇ PNG
            </button>
            <button
              class="btn btn-outline btn-xs border-base-content/20 bg-base-100/10 hover:bg-base-100/20 backdrop-blur"
            >
              📋 Copy
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SplitBillModal should render equal split tab 1`] = `
<div>
  <div
    class="flex h-screen flex-col overflow-hidden"
  >
    <div
      class="border-base-300 flex shrink-0 items-center justify-between border-b px-4 py-3"
    >
      <h2
        class="text-sm font-normal tracking-tight"
      >
        Split Bill
      </h2>
      <button
        class="btn btn-ghost btn-xs btn-square text-base opacity-60 hover:opacity-100"
      >
        ✕
      </button>
    </div>
    <div
      class="flex-1 overflow-y-auto p-8"
    >
      <div
        class="rounded-box border-base-300 bg-base-200 border p-4"
      >
        <div
          class="border-base-300 mb-4 flex w-full border-b"
        >
          <button
            class="flex-1 border-b-2 px-3 py-2 text-sm transition-colors border-primary text-primary"
          >
            Equal Split
          </button>
          <button
            class="flex-1 border-b-2 px-3 py-2 text-sm transition-colors text-base-content/40 border-transparent"
          >
            Who Owes Who
          </button>
        </div>
        <div
          class="space-y-3 "
        >
          <div
            class="form-control"
          >
            <label
              class="label mb-1 p-0"
            >
              <span
                class="label-text text-xs font-normal opacity-70"
              >
                Total Bill
              </span>
            </label>
            <input
              class="input input-sm input-bordered w-full text-right"
              min="0"
              step="0.01"
              type="number"
              value="100"
            />
          </div>
          <div
            class="form-control"
          >
            <label
              class="label mb-1 p-0"
            >
              <span
                class="label-text text-xs font-normal opacity-70"
              >
                Number of People
              </span>
            </label>
            <input
              class="input input-sm input-bordered w-full text-right"
              min="1"
              type="number"
              value="2"
            />
          </div>
          <div
            class="form-control"
          >
            <label
              class="label mb-1 p-0"
            >
              <span
                class="label-text text-xs font-normal opacity-70"
              >
                Tip (%)
              </span>
            </label>
            <input
              class="input input-sm input-bordered w-full text-right"
              min="0"
              step="0.5"
              type="number"
              value="10"
            />
          </div>
          <div
            class="form-control"
          >
            <label
              class="label mb-1 p-0"
            >
              <span
                class="label-text text-xs font-normal opacity-70"
              >
                Tax (%)
              </span>
            </label>
            <input
              class="input input-sm input-bordered w-full text-right"
              min="0"
              step="0.5"
              type="number"
              value="0"
            />
          </div>
          <div
            class="bg-base-200 mt-4 space-y-2 rounded-xl p-3"
          >
            <div
              class="flex items-center justify-between"
            >
              <span
                class="text-xs opacity-70"
              >
                Tip Amount
              </span>
              <span
                class="text-sm font-normal"
              >
                10 ₫
              </span>
            </div>
            <div
              class="flex items-center justify-between"
            >
              <span
                class="text-xs opacity-70"
              >
                Tax Amount
              </span>
              <span
                class="text-sm font-normal"
              >
                0 ₫
              </span>
            </div>
            <div
              class="divider my-1"
            />
            <div
              class="flex items-center justify-between"
            >
              <span
                class="text-xs opacity-70"
              >
                Total
              </span>
              <span
                class="text-sm font-normal"
              >
                110 ₫
              </span>
            </div>
            <div
              class="divider my-1"
            />
            <div
              class="flex items-center justify-between"
            >
              <span
                class="text-xs font-normal"
              >
                Per Person
              </span>
              <span
                class="text-lg font-normal"
              >
                55 ₫
              </span>
            </div>
          </div>
        </div>
        <div
          class="border-base-content/10 flex items-center justify-between gap-2 border-t pt-3"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <span
              class="text-xs opacity-60"
            >
              Currency
            </span>
            <select
              class="select select-xs select-bordered w-20"
            >
              <option
                value="VND"
              >
                VND
              </option>
              <option
                value="USD"
              >
                USD
              </option>
              <option
                value="EUR"
              >
                EUR
              </option>
              <option
                value="GBP"
              >
                GBP
              </option>
              <option
                value="JPY"
              >
                JPY
              </option>
              <option
                value="KRW"
              >
                KRW
              </option>
              <option
                value="THB"
              >
                THB
              </option>
              <option
                value="ILS"
              >
                ILS
              </option>
              <option
                value="INR"
              >
                INR
              </option>
              <option
                value="AUD"
              >
                AUD
              </option>
              <option
                value="CAD"
              >
                CAD
              </option>
              <option
                value="SGD"
              >
                SGD
              </option>
            </select>
          </div>
          <div
            class="flex items-center gap-1.5"
          >
            <button
              class="btn btn-outline btn-xs border-base-content/20 bg-base-100/10 hover:bg-base-100/20 backdrop-blur"
            >
              ⬇ PNG
            </button>
            <button
              class="btn btn-outline btn-xs border-base-content/20 bg-base-100/10 hover:bg-base-100/20 backdrop-blur"
            >
              📋 Copy
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SplitBillModal should switch to settle tab 1`] = `
<div>
  <div
    class="flex h-screen flex-col overflow-hidden"
  >
    <div
      class="border-base-300 flex shrink-0 items-center justify-between border-b px-4 py-3"
    >
      <h2
        class="text-sm font-normal tracking-tight"
      >
        Split Bill
      </h2>
      <button
        class="btn btn-ghost btn-xs btn-square text-base opacity-60 hover:opacity-100"
      >
        ✕
      </button>
    </div>
    <div
      class="flex-1 overflow-y-auto p-8"
    >
      <div
        class="rounded-box border-base-300 bg-base-200 border p-4"
      >
        <div
          class="border-base-300 mb-4 flex w-full border-b"
        >
          <button
            class="flex-1 border-b-2 px-3 py-2 text-sm transition-colors text-base-content/40 border-transparent"
          >
            Equal Split
          </button>
          <button
            class="flex-1 border-b-2 px-3 py-2 text-sm transition-colors border-primary text-primary"
          >
            Who Owes Who
          </button>
        </div>
        <div
          class="space-y-3 "
        >
          <p
            class="text-xs opacity-60"
          >
            Enter what each person paid. The calculator figures out who owes whom to settle up.
          </p>
          <label
            class="flex items-center gap-2 text-xs"
          >
            <input
              checked=""
              class="toggle toggle-xs"
              type="checkbox"
            />
            Split equally — auto-fill owes as
             
            33 ₫
             each
          </label>
          <div
            class="max-h-44 space-y-2 overflow-y-auto pr-1"
          >
            <div
              class="flex items-center gap-1.5"
            >
              <input
                class="input input-sm input-bordered w-28"
                placeholder="Name"
                type="text"
                value="Alice"
              />
              <input
                class="input input-sm input-bordered w-28 text-right"
                min="0"
                placeholder="Paid"
                step="0.01"
                type="number"
                value="100"
              />
              <span
                class="text-xs opacity-50"
              >
                /
              </span>
              <span
                class="bg-base-200 flex h-8 w-28 items-center justify-end rounded-md px-2 text-sm font-normal opacity-80"
              >
                33 ₫
              </span>
              <button
                class="btn btn-ghost btn-xs"
              >
                ✕
              </button>
            </div>
            <div
              class="flex items-center gap-1.5"
            >
              <input
                class="input input-sm input-bordered w-28"
                placeholder="Name"
                type="text"
                value="Bob"
              />
              <input
                class="input input-sm input-bordered w-28 text-right"
                min="0"
                placeholder="Paid"
                step="0.01"
                type="number"
                value=""
              />
              <span
                class="text-xs opacity-50"
              >
                /
              </span>
              <span
                class="bg-base-200 flex h-8 w-28 items-center justify-end rounded-md px-2 text-sm font-normal opacity-80"
              >
                33 ₫
              </span>
              <button
                class="btn btn-ghost btn-xs"
              >
                ✕
              </button>
            </div>
            <div
              class="flex items-center gap-1.5"
            >
              <input
                class="input input-sm input-bordered w-28"
                placeholder="Name"
                type="text"
                value="Carol"
              />
              <input
                class="input input-sm input-bordered w-28 text-right"
                min="0"
                placeholder="Paid"
                step="0.01"
                type="number"
                value=""
              />
              <span
                class="text-xs opacity-50"
              >
                /
              </span>
              <span
                class="bg-base-200 flex h-8 w-28 items-center justify-end rounded-md px-2 text-sm font-normal opacity-80"
              >
                33 ₫
              </span>
              <button
                class="btn btn-ghost btn-xs"
              >
                ✕
              </button>
            </div>
          </div>
          <div
            class="flex gap-2"
          >
            <button
              class="btn btn-outline btn-sm border-base-content/20 bg-base-100/10 hover:bg-base-100/20 flex-1 backdrop-blur"
            >
              + Add Person
            </button>
            <button
              class="btn btn-primary btn-sm flex-1"
            >
              Settle Up
            </button>
          </div>
          <div
            class="flex items-center justify-between text-xs opacity-60"
          >
            <span>
              Total Paid:
               
              <strong>
                100 ₫
              </strong>
            </span>
            <span>
              Total Owes:
               
              <strong>
                100 ₫
              </strong>
            </span>
          </div>
        </div>
        <div
          class="border-base-content/10 flex items-center justify-between gap-2 border-t pt-3"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <span
              class="text-xs opacity-60"
            >
              Currency
            </span>
            <select
              class="select select-xs select-bordered w-20"
            >
              <option
                value="VND"
              >
                VND
              </option>
              <option
                value="USD"
              >
                USD
              </option>
              <option
                value="EUR"
              >
                EUR
              </option>
              <option
                value="GBP"
              >
                GBP
              </option>
              <option
                value="JPY"
              >
                JPY
              </option>
              <option
                value="KRW"
              >
                KRW
              </option>
              <option
                value="THB"
              >
                THB
              </option>
              <option
                value="ILS"
              >
                ILS
              </option>
              <option
                value="INR"
              >
                INR
              </option>
              <option
                value="AUD"
              >
                AUD
              </option>
              <option
                value="CAD"
              >
                CAD
              </option>
              <option
                value="SGD"
              >
                SGD
              </option>
            </select>
          </div>
          <div
            class="flex items-center gap-1.5"
          >
            <button
              class="btn btn-outline btn-xs border-base-content/20 bg-base-100/10 hover:bg-base-100/20 backdrop-blur"
            >
              ⬇ PNG
            </button>
            <button
              class="btn btn-outline btn-xs border-base-content/20 bg-base-100/10 hover:bg-base-100/20 backdrop-blur"
            >
              📋 Copy
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
